fixish: improves coin dropdown alignment but still off in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1631,9 +1631,9 @@
   position: absolute;
   z-index: 100;
   max-height: 10em;
-  width: 100%;
+  width: 101.5%;
   top: 100%;
-  left: -0.5px;
+  left: -1.5px;
   overflow: hidden;
   transition:
     all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
